--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,6 +16,10 @@
     <string name="data_list_company_text">Issuer</string>
     <string name="data_list_from_text">Destination</string>
     <string name="data_list_to_text">To</string>
+    <string name="qr_data_intent_extra">qrdata</string>
+    <string name="list_filter">LIST_FILTER</string>
+    <string name="start_match">START_MATCH</string>
+    <string name="end_match">END_MATCH</string>
     <string-array name="FilterCategories">
         <item>Select a category</item>
         <item>Source</item>
