--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,8 +11,8 @@
     <string name="dummy_content">DUMMY\nCONTENT</string>
     <string name="settings_title">Settings</string>
     <string name="settings_text">Adjust how the filter should work</string>
-    <string name="settings_matches_start">Allow matches on beginning of results</string>
-    <string name="settings_matches_on_end_">Allow matches on end of results</string>
+    <string name="settings_matches_start">Allow matches on end of results</string>
+    <string name="settings_matches_on_end_">Allow matches on beginning of results</string>
     <string name="data_list_company_text">Issuer</string>
     <string name="data_list_from_text">From</string>
     <string name="data_list_to_text">To</string>
